--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
         <item name="colorPrimaryDark">@color/sunshine_dark_blue</item>
     </style>
 
-    <!-- Main Activity theme. -->
     <!-- Main activity theme. -->
     <style name="ForecastTheme" parent="AppTheme">
         <item name="actionBarStyle">@style/ActionBar.Solid.Sunshine.NoTitle</item>
@@ -18,8 +17,12 @@
         <item name="logo">@drawable/ic_logo</item>
     </style>
 
-    <style name="ForecastListStyle">
+    <!-- Settings activity theme. -->
+    <style name="SettingsTheme" parent="AppTheme">
+    </style>
 
+    <!-- Forecast listview style -->
+    <style name="ForecastListStyle">
     </style>
 
 </resources>
